Data, including labels for values, are shown correctly getting it from View. Now working in showing several bars.